# tinyrenderwgpu

./: CMakeLists.txt  README.md
cmake/: glfw.cmake  utils.cmake
resources/: simple.wgsl
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/tinyrender/: CMakeLists.txt
src/tinyrender/include/: tinyrender.h
src/tinyrender/src/: tinyrender.cpp
src/webgpu/: CMakeLists.txt
